@@ -2902,6 +2902,11 @@ div.v-subheader {
  caret-color:var(--active-color)!important;
 }
 
+.np-pulse {
+ animation:pulse 1s 1;
+ will-change: opacity;
+}
+
 .pulse {
  animation:pulse 2s infinite;
  will-change: opacity;
