@@ -3,6 +3,7 @@
 1. Hide menu and close buttons on now-playing screen if using "np-only" URL.
 2. Work-around volume control moving in desktop layout when toggle MAI button.
 3. Better handling of now-playing button sizes for very narrow screen widths.
+4. Tweak now-playing button pulse.
 
 4.1.5
 -----
